--- a/src/backend/services/identity-api/Dockerfile
+++ b/src/backend/services/identity-api/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM --platform=linux/arm64 mcr.microsoft.com/dotnet/core/sdk:3.1.426-buster-arm64v8 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0.423-1-alpine3.19 AS build
 WORKDIR /src
 COPY Identity.API/ ./api
 COPY Identity.API.UnitTests ./tests
@@ -17,7 +17,7 @@ RUN dotnet build api/Identity.API.csproj -c Release -o /app
 FROM build AS publish
 RUN dotnet publish api/Identity.API.csproj -c Release -o /app
 
-FROM --platform=linux/arm64 mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine-arm64v8 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine3.19 AS final
 WORKDIR /app
 
 COPY --from=publish /app .
