--- a/src/backend/docker/docker-compose.grafana.yaml
+++ b/src/backend/docker/docker-compose.grafana.yaml
@@ -17,14 +17,14 @@ services:
   #   image: mingrammer/flog
   #   command: -f json -d 1s -l
 
-  promtail:
-    image: grafana/promtail:2.8.0
-    volumes:
-      - ./docker/promtail-local-config.yaml:/etc/promtail/config.yaml:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: -config.file=/etc/promtail/config.yaml
-    networks:
-      - loki
+#  promtail:
+#    image: grafana/promtail:2.8.0
+#    volumes:
+#      - ./docker/promtail-local-config.yaml:/etc/promtail/config.yaml:ro
+#      - /var/run/docker.sock:/var/run/docker.sock
+#    command: -config.file=/etc/promtail/config.yaml
+#    networks:
+#      - loki
 
   grafana:
     image: grafana/grafana:8.2.6
@@ -48,34 +48,34 @@ services:
       - loki
       - default
   
-  influxdb:
-    image: influxdb:2.0-alpine
-    networks:
-      - default
-    ports:
-      - "8086:8086"
-    environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=croco
-      - DOCKER_INFLUXDB_INIT_PASSWORD=password1
-      - DOCKER_INFLUXDB_INIT_ORG=k6io
-      - DOCKER_INFLUXDB_INIT_BUCKET=demo
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=EEKpryGZk8pVDXmIuy484BKUxM5jOEDv7YNoeNZUbsNbpbPbP6kK_qY9Zsyw7zNnlZ7pHG16FYzNaqwLMBUz8g==
+#  influxdb:
+#    image: influxdb:2.0-alpine
+#    networks:
+#      - default
+#    ports:
+#      - "8086:8086"
+#    environment:
+#      - DOCKER_INFLUXDB_INIT_MODE=setup
+#      - DOCKER_INFLUXDB_INIT_USERNAME=croco
+#      - DOCKER_INFLUXDB_INIT_PASSWORD=password1
+#      - DOCKER_INFLUXDB_INIT_ORG=k6io
+#      - DOCKER_INFLUXDB_INIT_BUCKET=demo
+#      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=EEKpryGZk8pVDXmIuy484BKUxM5jOEDv7YNoeNZUbsNbpbPbP6kK_qY9Zsyw7zNnlZ7pHG16FYzNaqwLMBUz8g==
 
-  k6:
-    image: k6
-    build: ./load-tests
-    networks:
-      - default
-    ports:
-      - "6565:6565"
-    environment:
-      - K6_OUT=xk6-influxdb=http://influxdb:8086
-      - K6_INFLUXDB_ORGANIZATION=k6io
-      - K6_INFLUXDB_BUCKET=demo
-      - K6_INFLUXDB_INSECURE=true
-        # NOTE: This is an Admin token, it's not suggested to use this configuration in production.
-        # Instead, use a Token with restricted privileges.
-      - K6_INFLUXDB_TOKEN=EEKpryGZk8pVDXmIuy484BKUxM5jOEDv7YNoeNZUbsNbpbPbP6kK_qY9Zsyw7zNnlZ7pHG16FYzNaqwLMBUz8g==
-    volumes:
-      - ./load-tests/scripts:/scripts
+#  k6:
+#    image: k6
+#    build: ../load-tests
+#    networks:
+#      - default
+#    ports:
+#      - "6565:6565"
+#    environment:
+#      - K6_OUT=xk6-influxdb=http://influxdb:8086
+#      - K6_INFLUXDB_ORGANIZATION=k6io
+#      - K6_INFLUXDB_BUCKET=demo
+#      - K6_INFLUXDB_INSECURE=true
+#        # NOTE: This is an Admin token, it's not suggested to use this configuration in production.
+#        # Instead, use a Token with restricted privileges.
+#      - K6_INFLUXDB_TOKEN=EEKpryGZk8pVDXmIuy484BKUxM5jOEDv7YNoeNZUbsNbpbPbP6kK_qY9Zsyw7zNnlZ7pHG16FYzNaqwLMBUz8g==
+#    volumes:
+#      - ./load-tests/scripts:/scripts
